@@ -1,17 +1,5 @@
 
 
-Qt_widget_style_editor.o: \
-
-
-Qt_widget_styled_layer.o: \
-
-
-Show_points.o: \
-
-
-Show_segments_base.o: \
-
-
 conform.o: \
   ../../../Triangulation_2/include/CGAL/Constrained_Delaunay_triangulation_2.h \
   ../../../Triangulation_2/include/CGAL/triangulation_assertions.h \
@@ -74,6 +62,7 @@ mesh.o: \
   ../../include/CGAL/Filter_circulator.h \
   ../../include/CGAL/Mesh_2/Refine_edges_visitor.h \
   ../../include/CGAL/Mesh_2/Refine_faces.h \
+  ../../include/CGAL/Mesh_2/Face_badness.h \
   ../../include/CGAL/Double_map.h \
   ../../include/CGAL/Delaunay_mesh_face_base_2.h \
   ../../include/CGAL/Delaunay_mesh_area_criteria_2.h \
@@ -112,6 +101,7 @@ mesh_demo.o: \
   ../../include/CGAL/Delaunay_mesher_2.h \
   ../../include/CGAL/Mesh_2/Refine_edges_visitor.h \
   ../../include/CGAL/Mesh_2/Refine_faces.h \
+  ../../include/CGAL/Mesh_2/Face_badness.h \
   ../../include/CGAL/Double_map.h \
   ../../include/CGAL/Delaunay_mesh_local_size_criteria_2.h \
   ../../include/CGAL/Delaunay_mesh_size_criteria_2.h \
@@ -119,3 +109,15 @@ mesh_demo.o: \
   ../../include/CGAL/Delaunay_mesh_face_base_2.h \
   ../../include/CGAL/IO/File_poly.h \
   ../../../Triangulation_2/include/CGAL/Delaunay_triangulation_2.h \
+
+
+Qt_widget_styled_layer.o: \
+
+
+Qt_widget_style_editor.o: \
+
+
+Show_points.o: \
+
+
+Show_segments_base.o: \
