@@ -1,0 +1,30 @@
+// Copyright (c) 2004  INRIA Sophia-Antipolis (France).
+// All rights reserved.
+//
+// This file is part of CGAL (www.cgal.org); you may redistribute it under
+// the terms of the Q Public License version 1.0.
+// See the file LICENSE.QPL distributed with CGAL.
+//
+// Licensees holding a valid commercial license may use this file in
+// accordance with the commercial license agreement provided with the software.
+//
+// This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
+// WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+//
+// $Source$
+// $Revision$ $Date$
+// $Name$
+//
+// Author(s)     : Laurent RINEAU
+
+#ifndef CGAL_MESH_2_FACE_BADNESS_H
+#define CGAL_MESH_2_FACE_BADNESS_H
+
+namespace CGAL
+{
+  namespace Mesh_2
+  {
+    enum Face_badness { NOT_BAD, BAD, IMPERATIVELY_BAD };
+  }
+}
+#endif // CGAL_MESH_2_FACE_BADNESS_H
